merge latest code from upstream 20151225